Bump version.